--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+        html{
+            width: 100%;
+            height: 100%;
+        }
+        body {
+            margin: 0;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
-<body style="overflow: hidden">
+<body>
 <div id="root" style="width: 100%;height: 100%;"></div>
 </body>
 </html>
